Cumulative bugfix and changes (#14)